syntax = "proto3";

package proto;

option go_package = "./proto;proto";

service Postret {
	rpc Register(Request) returns (Response) {}
	rpc Stream(StreamingRequest) returns (stream StreamingResponse) {}
	rpc PingPong(stream Ping) returns (stream Pong) {}
}

message Request {
	string mobile = 1;
	string password = 2;
	string sms_code = 3;
}

message Response {
	string errno = 1;
	string errmsg = 2;
	string name = 3;
}

message StreamingRequest {
	int64 count = 1;
}

message StreamingResponse {
	int64 count = 1;
}

message Ping {
	int64 stroke = 1;
}

message Pong {
	int64 stroke = 1;
}
